Improve StyledAlert component to use "fixed" as the css display value. This improves the user experience with alerts inserted into scrollable elements as the alert is always visible.

--- a/src/media/js/EzWebAPI_ext/EzWebGadgets.css
+++ b/src/media/js/EzWebAPI_ext/EzWebGadgets.css
@@ -541,13 +541,9 @@ div.styled_numeric_field div.numeric_bottom_button {
 /* Styled alert */
 
 .styled_alert {
-  position: absolute;
+  position: fixed;
   top:      0;
   right:    0;
-  bottom:   0;
-  left:     0;
-  width:    100%;
-  height:   100%;
   z-index:  1111111;
 }
 
